# DPT-JS

./: CMakeLists.txt  LICENSE.md  README.md
lib/uv/src/unix/: loop.c
src/: callbacks.h  dptjs.c  dptjs.h  dptsynsugar.h  fs.c  fs.h  handle.h  loop.h  main.c  miniz.c  miniz.h  misc.c  misc.h  pipe.c  pipe.h  req.h  stream.c  stream.h  tcp.h  timer.h  tty.h  utils.h  uv_schema.c  uv_schema.h
src/dptfunctions/gpio/: dpt_gpio.c  dpt_gpio.h
src/dptfunctions/i2c/: dpt_i2c.c  dpt_i2c.h
src/dptfunctions/serial/: dpt_serial.c  dpt_serial.h
